--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Portfolio
+            <div class="logo"><a href="#">Identifying Purpose/Develop and Culture 
                 <span>Cameron Smith</span></a></div>
-            <ul class="menu">
+            <ul class="menu"> 
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
-                <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#teams" class="menu-btn">Other</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
+           
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -40,10 +39,14 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Cameoron Smith</div>
-                <div class="text-3">And I'm full stack certified<span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <div class="text-1"></div>
+                <div class="text-2">Cameron Smith</div>
+                <div class="text-3">sales and recruiting, assisting in Scaling business and personal/Team development<span class="typing"></span></div>
+          <!-- Calendly link widget begin -->
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+<a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cameron-ldy'});return false;">Schedule a time with me</a>
+<!-- Calendly link widget end -->
             </div>
         </div>
     </section>
@@ -51,15 +54,16 @@
     <!-- about section start -->
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">About me</h2>
+            <h2 class="title">purpose to Guide and Develop/scale other small businesses, People, and corporations</h2>
             <div class="about-content">
                 <div class="column left">
                     <img src="images/profile-1.jpeg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm full stack certified, currently still in the course. <span class="typing-2"></span></div>
-                    <p>I am full Stack Certified, I have sales ecperience and able to code in most languages.</p>
-                    <a href="#">Download CV</a>
+                    <div class="text">CREATIVE DIRECTION AND attention to Detail is what makes or breaks a business/deals. It will set you apart from the rest'
+                        <span class="typing-2"></span></div>
+                    <p>Constantly Pushing boundaries and the status quo, I am not your traditional Computer Science Programer.</p>
+                    <a href="#">Schedule</a>
                 </div>
             </div>
         </div>
@@ -68,27 +72,27 @@
     <!-- services section start -->
     <section class="services" id="services">
         <div class="max-width">
-            <h2 class="title">My services</h2>
+            <h2 class="title">services</h2>
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design</div>
-                        <p>Original design and customized to be able to accomplish the goal of the sales,business, and make it simple and easy to use.</p>
+                        <div class="text">Web Design/Creative Structure </div>
+                        <p>Original design and customized to be able to accomplish the goal of driving sales and better business. I make it so easy a Boomer can understand it.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
-                        <div class="text">JavaScript</div>
-                        <p>help you better get intouch with and reach to get the attention from your audience and be able to reach more bussiness.</p>
+                        <div class="text">Consulting</div>
+                        <p>Drive Authentic traffic and help you reach your audience/Ability to see the Next steps your business needs to take to get to the next level</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
-                        <div class="text">html/css</div>
-                        <p>Able to make it function and have the javascript you would need built in.</p>
+                        <div class="text">Build and develop leaders/sales teams</div>
+                        <p>Keeping it simple but professional understanding how to drive growth and Develop Culture.</p>
                     </div>
                 </div>
                </div>
@@ -99,48 +103,48 @@
     <!-- skills section start -->
     <section class="skills" id="skills">
         <div class="max-width">
-            <h2 class="title">My skills</h2>
+            <h2 class="title">Creating a clear picture</h2>
             <div class="skills-content">
                 <div class="column left">
-                    <div class="text">My creative skills & experiences.</div>
-                    <p>Easy to customize and simple ideas to maintain.</p>
+                    <div class="text">What I will Do for you and your Business</div>
+                    <p>Find a common purpose, identify and drive communication in </p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
                         <div class="info">
-                            <span>HTML</span>
-                            <span>90%</span>
+                            <span>Crawl, walk, run method</span>
+                            <span></span>
                         </div>
-                        <div class="line html"></div>
+                        <div class=" html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>CSS</span>
-                            <span>60%</span>
+                            <span>Development and sustainable growth</span>
+                            <span></span>
                         </div>
-                        <div class="line css"></div>
+                        <div class=" css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>JavaScript</span>
-                            <span>80%</span>
+                            <span>identify your why/purpose</span>
+                            <span></span>
                         </div>
-                        <div class="line js"></div>
+                        <div class=" js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>PHP</span>
-                            <span>50%</span>
+                            <span>Patience</span>
+                            <span></span>
                         </div>
-                        <div class="line php"></div>
+                        <div class=" php"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>MySQL</span>
-                            <span>70%</span>
+                            <span>Innovate</span>
+                            <span></span>
                         </div>
-                        <div class="line mysql"></div>
+                        <div class="mysql"></div>
                     </div>
                 </div>
             </div>
@@ -150,26 +154,26 @@
     <!-- Project section start -->
     <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title">Other Skills and experiences</h2>
+            <h2 class="title">Other Skills and experience</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-1.jpeg" alt="">
-                        <div class="text">8 years of door to door sales experience</div>
+                        <div class="text">Developing a growth mindset</div>
                         <p></p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-2.jpeg" alt="">
-                        <div class="text">Direct and simple design creation</div>
-                        <p>.</p>
+                        <div class="text">Identify the current market and Pivot away from competition </div>
+                        <p></p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-3.jpeg" alt="">
-                        <div class="text">Full Stack developer</div>
+                        <div class="text">Fluidity/structure and course correction</div>
                         <p></p>
                     </div>
                 </div>
@@ -205,7 +209,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">cameronsmith@gmail.com</div>
+                                <div class="sub-title">cameronsmithrm1216@gmail.com</div>
                             </div>
                         </div>
                     </div>
