--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Identifying Purpose/Develop and Culture 
+            <div class="logo"><a href="#">Full Stack Programmer/Sales, Market Penetration
                 <span>Cameron Smith</span></a></div>
             <ul class="menu"> 
                 <li><a href="#home" class="menu-btn">Home</a></li>
