--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="home-content">
                 <div class="text-1"></div>
                 <div class="text-2">Cameron Smith</div>
-                <div class="text-3">sales and recruiting, assisting in Scaling business and personal/Team development<span class="typing"></span></div>
+                <div class="text-3">sales and recruiting, assisting in Scaling business<span class="typing"></span></div>
           <!-- Calendly link widget begin -->
 <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
@@ -54,15 +54,15 @@
     <!-- about section start -->
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">purpose to Guide and Develop/scale other small businesses, People, and corporations</h2>
+            <h2 class="title">sales/scale small businesses</h2>
             <div class="about-content">
                 <div class="column left">
                     <img src="images/profile-1.jpeg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">CREATIVE DIRECTION AND attention to Detail is what makes or breaks a business/deals. It will set you apart from the rest'
+                    <div class="text">Working Smarter and Saving time with best Strategic Practices
                         <span class="typing-2"></span></div>
-                    <p>Constantly Pushing boundaries and the status quo, I am not your traditional Computer Science Programer.</p>
+                    <p>Constantly Pushing boundaries and the status quo.</p>
                     <a href="#">Schedule</a>
                 </div>
             </div>
@@ -107,7 +107,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">What I will Do for you and your Business</div>
-                    <p>Find a common purpose, identify and drive communication in </p>
+                    <p>Find a common purpose, identify and drive sales</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
@@ -127,14 +127,14 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>identify your why/purpose</span>
+                            <span>Improving sales and Finding the right Strategy for Growth</span>
                             <span></span>
                         </div>
                         <div class=" js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Patience</span>
+                            <span>Sustainable Growth</span>
                             <span></span>
                         </div>
                         <div class=" php"></div>
@@ -166,7 +166,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-2.jpeg" alt="">
-                        <div class="text">Identify the current market and Pivot away from competition </div>
+                        <div class="text">Identify the current market and Pivot to set you apart from the competetion </div>
                         <p></p>
                     </div>
                 </div>
