--- a/index.html
+++ b/index.html
@@ -77,22 +77,22 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design/Creative Structure </div>
+                        <div class="text">Web Design/Creative Structure</div>
                         <p>Original design and customized to be able to accomplish the goal of driving sales and better business. I make it so easy a Boomer can understand it.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
-                        <div class="text">Consulting</div>
-                        <p>Drive Authentic traffic and help you reach your audience/Ability to see the Next steps your business needs to take to get to the next level</p>
+                        <div class="text">Consulting sales and Growth</div>
+                        <p>Drive Authentic traffic and help you reach your Goals/Ability to see the Next steps your business needs to take to get to the next level</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Build and develop leaders/sales teams</div>
-                        <p>Keeping it simple but professional understanding how to drive growth and Develop Culture.</p>
+                        <p>Keeping it simple but professional understanding how to drive growth and identify what creates Culture.</p>
                     </div>
                 </div>
                </div>
